# CG

./: CMakeLists.txt  package-lock.json  package.json  tsconfig.json
src/Common/Audio/: Audio.cpp  Audio.h  AudioPlayer.cpp  AudioPlayer.h
src/Common/BaseWindow/: BaseWindow.cpp  BaseWindow.h
src/Common/Component/: BaseComponent.h  Color.h  Point3.h  Vector.h  Vector3.h
src/Common/GLFWInitializer/: GLFWInitializer.cpp  GLFWInitializer.h
src/Common/Random/: Random.h
src/Common/Shader/: Mesh.h  Program.h  Shader.h  ShaderProgram.h  Texture.h
src/Example/: CMakeLists.txt
src/lw1/Hangman/: index.html  script.js
src/lw1/Hangman/Controller/: AppController.js
src/lw1/Hangman/Model/: HangmanModel.js  LettersModel.js  WordModel.js  WordProvider.js
src/lw1/Hangman/View/: HangmanView.js  LettersView.js  WordView.js
src/lw1/Name/: Letters.js  index.html  script.js
src/lw1/Picture/: data.js  index.html  script.js
src/lw1/Picture/Common/: ObserverInterface.js
src/lw1/Picture/Controller/: TrolleybusController.js
src/lw1/Picture/Model/: TrolleybusModel.js
src/lw1/Picture/View/: ImageLoader.js  Lines.js  Trolleybus.js  TrolleybusView.js
src/lw2/Balls/: index.html  script.js
src/lw2/Balls/Controller/: Controller.js
src/lw2/Balls/Model/: Ball.js  Model.js  Obstacle.js
src/lw2/Balls/View/: Sound.js  View.js
src/lw2/Balls/static/styles/: style.css
src/lw3/Asteroids/: AsteroidsGame.cpp  AsteroidsGame.h  AsteroidsView.cpp  AsteroidsView.h  CMakeLists.txt  IView.h  main.cpp
src/lw3/Asteroids/Entity/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h
src/lw3/Example/: CMakeLists.txt  main.cpp
src/lw4/Shape/: CMakeLists.txt  Shape.cpp  Shape.h  main.cpp
src/lw4/Shape3/: CMakeLists.txt  MobiusStrip.cpp  MobiusStrip.h  Shape3.cpp  Shape3.h  main.cpp
src/lw5/Arcanoid3D/: CMakeLists.txt  main.cpp
src/lw5/Arcanoid3D/Model/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  GameModel.cpp  GameModel.h  Level.cpp  Level.h  Paddle.cpp  Paddle.h
src/lw5/Arcanoid3D/View/: GameView.cpp  GameView.h
src/lw5/Arcanoid3D/data/shaders/: fragment.glsl  vertex.glsl
